[tool.poetry]
name = "data-structures-and-algorithms"
version = "0.2.0"
description = "Data structures and algorithms implemented in Python"
authors = ["Roman Kurakin"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
nbconvert = "^7.14.2"
notebook = "^7.0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^v0.2.1"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
