[tool.poetry]
name = "data-structures-and-algorithms"
version = "0.3.0"
description = "This project is a collection of data structures and algorithms implemented in Python"
authors = ["Roman Kurakin"]
repository = "https://github.com/romankurakin/data-structures-and-algorithms"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.2"
matplotlib = "^3.8.2"
nbconvert = "^7.16.0"
notebook = "^7.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
